--- a/view/App.view.xml
+++ b/view/App.view.xml
@@ -14,7 +14,7 @@
                     <Label text="Importe" labelFor="inputNumber1"/>
                     <Input
                         id="Importe"
-                        
+                        value="{/Importe}"
                         description="€"
                         class="sapUiSmallMarginBottom"
                         placeholder="Enter value"
@@ -22,7 +22,7 @@
                     <Label text="Valor Ticket" labelFor="inputNumber1"/>
                     <Input
                         id="Ticket1"
-                      
+                    	value="{/Ticket1}"
                         description="€"
                         maxLength="1"
                         class="sapUiSmallMarginBottom"
@@ -31,7 +31,7 @@
                     <Label text="Valor Ticket" labelFor="inputNumber2"/>
                     <Input
                         id="Ticket2"
-                	
+                		value="{/Ticket2}"
                          maxLength="1"
                         description="€"
                         class="sapUiSmallMarginBottom"
@@ -44,7 +44,7 @@
                         press="onCalculate"
                         class="sapUiSmallMargin"/>
                     <l:VerticalLayout class="sapUiContentPadding" width="100%"> 
-                    <Text id="Textticket" text="" class="sapUiTinyMarginTop"/>
+                    <Text id="Textticket" text="{/Textticket}"  class="sapUiTinyMarginTop"/>
                     </l:VerticalLayout>
                     </l:BlockLayoutCell>
 				</l:BlockLayoutRow>
